client/scss/components/_banner-control.scss
#banner-control {
  &:not(:checked) ~ [role=banner] .subnav {
    max-height: 0;
    opacity: 0;
  }

  &:checked {
    ~ [role=banner] {
      transform: translateX(0);
    }

    ~ main {
      transform: scale(0.8) translateY(20vh);

      &:after {
        pointer-events: initial;
        opacity: 0.4;
      }
    }
  }
}

